sao/src/sao.less
/* This file is part of Tryton.  The COPYRIGHT file at the top level of
   this repository contains the full copyright notices and license terms. */
@import "bootstrap";
@import "bootstrap-rtl";
@import "sao-variables";
// JMO : merge_60 TODO: @import "src/coopengo.less";
html[theme="default"] {
    @import "theme";
}

// Fix double rtl prefix
.float-rtl-grid-columns(@class, @rtl-prefix) {
  .col(@index) { // initial
    @item: ~".col-@{class}-@{index}";
    .col((@index + 1), @item);
  }
  .col(@index, @list) when (@index =< @grid-columns) { // general
    @item: ~".col-@{class}-@{index}";
    .col((@index + 1), ~"@{list}, @{item}");
  }
  .col(@index, @list) when (@index > @grid-columns) { // terminal
    @{list} {
      float: right;
    }
  }
  .col(1); // kickstart it
}

// Backport from Bootstrap 4
.stretched-link {
    &::after {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 1;
        // Just in case `pointer-events: none` is set on a parent
        pointer-events: auto;
        content: "";
        // IE10 bugfix, see https://stackoverflow.com/questions/16947967/ie10-hover-pseudo-class-doesnt-work-without-background-color
        background-color: rgba(0, 0, 0, 0);
    }
}

.btn-horizontal {
    .text-overflow()
}

.input-group > .form-control-feedback {
    z-index: 3;
}

.input-group-addon {
    > .label {
        position: absolute;
        right: 0px;
        top: -5px;
    }
}

.navbar-inverse {
    .close {
        color: @navbar-inverse-link-color;

        &:hover,
        &:focus {
            color: @navbar-inverse-link-hover-color;
            background-color: @navbar-inverse-link-hover-bg;
        }
    }
    .active .close {
        &,
        &:hover,
        &:focus {
            color: @navbar-inverse-link-active-color;
            background-color: @navbar-inverse-link-active-bg;
        }
    }
}

.navbar {
    .icon {
        display: inline-block;
        height: unit(@line-height-base, em);
        vertical-align: middle;
    }
}

.navbar-nav {
    @media (min-width: @grid-float-breakpoint) {
        float:none;
    }
}

.btn-primary {
    .icon {
        filter: brightness(0) invert(1);
    }
}

.panel-heading {
    a {
        color: inherit;
    }
}

.modal-header {
    background-color: @brand-primary;
    color: #fff;

    .modal-title {
        small {
            color: @gray-lighter;
        }
    }
}

#tablist {
    display: flex;
    overflow-x: auto;

    > li {
        flex: auto;
        min-width: 9em;
        > a {
            > span {
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
                /* For IE */
                display: block;
                margin-right: 15px;
            }
            [dir="rtl"] & > span {
                margin-right: 0;
                margin-left: 15px;
            }
        }
    }
}

@media screen and (max-width: @screen-xs-max) {
    #tablist {
        display: block;

        > li {
            float: none;
        }
    }
}

#menu, #tabs {
    margin-top: 5px;
    padding-bottom: 5px;
}

#menu {
    background-color: @navbar-default-bg;
    border-color: @panel-default-border;
    border-style: solid;
    border-radius: 0 @panel-border-radius @panel-border-radius 0;
    border-width: 1px;
    margin-top: 5px;
    .treeview {
        height: auto;
    }
}
[dir="rtl"] #menu {
    border-right: none;
}
@media screen and (max-width: @screen-sm-max) {
    #menu {
        border-right: none;
        border-left: none;
        border-width: none;
    }
    .active #menu {
        border-width: 1px;
    }
    [dir="rtl"] .active #menu {
        border-right: none;
    }
}

#tabcontent {
    display: flex;
    flex: 1;

    > .tab-pane > .panel {
        display: flex;
        flex-direction: column;
        flex: 1;
        margin-bottom: 0;

        > .panel-body {
            display: flex;
            flex: 1;
            flex-direction: column;
            min-height: 0;
        }
    }

    > .active {
        /* override bootstrap which sets display to block */
        display: flex;
        flex: 1;
    }
}

.screen-container {
    display: flex;
    flex-direction: column;
    flex: 1;
}

@media screen and (min-width: @screen-sm-min) {
    #global-search-entry {
        width: 10em;
        -webkit-transition: width .5s ease;
        -o-transition: width .5s ease;
        transition: width .5s ease;

        .global-search-container:focus-within & {
            width: 20em;
        }
    }
}

#user-preferences > a {
    max-width: 30em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;

    > img {
        margin: -5px 5px;
        width: 30px;

        &[src=''] {
            width: 0;
        }

        &.img-badge {
            margin-left: -15px;
            margin-bottom: -25px;
            width: 15px;
        }
    }
}
/* ... */

